# mat_discover

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CNAME  CONTRIBUTING.md  LICENSE  MANIFEST  README.md  comb-score.csv  conda-forge.yml  crabnet_performance.pkl  dens-score.csv  discover_.py  dist_matrix_settings.json  environment.yml  equations.nb  fixup_grayskull.py  gcv-pareto.html  generate_elasticity_data.py  grayskull-meta.yaml  mat_discover_example.py  mat_discover_pypi.ipynb  mat_discover_testpypi.ipynb  meta.yaml  peak-score.csv  pf-dens-proxy.html  pf-frac-proxy.html  pf-peak-proxy.html  pf-train-contrib-proxy.html  pyproject.toml  rand_novelty_equal_performance.pkl  requirements.txt  requirements_relax.txt  run_grayskull.py  setup.py  sklearn_novelty_equal_performance.pkl  stable-mp-500.csv  test_discover.py  (+3 more)
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml
.ci_support/: linux_64_python3.7.____cpython.yaml  linux_64_python3.8.____cpython.yaml  linux_64_python3.9.____cpython.yaml  osx_64_python3.7.____cpython.yaml  win_64_python3.7.____cpython.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: automerge.yml  basic-miniconda.yml  binder.yml  codeql-analysis.yml  conda-build-pytest  conda-build-pytest.yml  dependabot-ci.yml  flit-install-test.yml  flit-publish.yml  manual-conda-publish.yml  manual-coverage.yml  os-matrix.yml  python-package-conda.yml  test-publish-release.yml
.github/workflows/ISSUE_TEMPLATE/: bug_report.md  config.yml
.scripts/: build_steps.sh  run_docker_build.sh
ElM2D/: ElM2D-test.py  ElM2D.py  ElM2D_.py  ElM2D_UMAP.py  ElMD.py  Timer.py  __init__.py  automatminer-debug.py  benchmark_njit.py  cuda-sim-test.py  cuda_dist_matrix.py  discover.py  metrics.py  njit_dist_matrix.py  numba-gpu-test.py  pf-dens-proxy.html  process_map-test.py  test_ElM2D.py  test_discover.py  test_dist_matrix.py  test_njit.py
ElM2D/ael_bulk_modulus_voigt/: elmd.pptx
ElM2D/numba-cuda-debug/: cupy-broadcast-test.py  wasserstein-gpu-debug.xlsx
ElM2D/numba-cuda-debug/test-project-for-numba-and-cuda-functions-master/: README.md
ElM2D/utils/: nearest_neigh.py  pareto.py
discover/: __init__.py  discover_.py  stable-mp.csv  test_discover-gcv.ipynb
discover/figures/: pareto-front.html
discover/utils/: Timer.py  nearest_neigh.py  pareto.py  plotting.py
docs/: requirements.txt
docs/source/: conf.py  contributing.rst  index.rst  mat_discover.rst  mat_discover.utils.rst  modules.rst  readme.md
examples/: README.rst  adaptive_design_compare.py  bare_bones.py  closed_loop_adaptive_design_example.py  crabnet_performance.py  elmd_densmap_cluster.ipynb  elmd_densmap_cluster.py  elmd_densmap_cluster_colab.ipynb  hyperparameter_combinations.py  mat_discover_example.py  mat_discover_pypi.ipynb  matbench_log_kvrh_gridrdf.py  no_dim_reduce_compare.py  not_precomputed.py  rand_novelty_equal_performance.pkl  real_predictions.py  similarity_matrix.csv  sklearn_novelty.py  sklearn_novelty_ad_compare.py  structurally-aware-mat-discover-bare-bones.ipynb  structurally-aware-mat-discover-grid-rdf.ipynb  structurally-aware-mat-discover.ipynb  suggest_next_experiment_example.py
examples/figures/lc_data/: test-property_lc.csv
examples/hyperparameter_combinations/tables_MinMaxScaler_weights_0-1/: comb-score.csv  dens-score.csv
examples/hyperparameter_combinations/tables_MinMaxScaler_weights_1-0/: comb-score.csv  dens-score.csv
examples/hyperparameter_combinations/tables_MinMaxScaler_weights_1-1/: comb-score.csv  dens-score.csv  peak-score.csv
examples/hyperparameter_combinations/tables_MinMaxScaler_weights_1-2/: peak-score.csv
examples/models/trained_models/: test-property.pth.REMOVED.git-id
figures/: README.md  README.rst  ad-compare.html  extraordinary_histogram.html  gcv-pareto.html  pf-dens-proxy.html  pf-frac-proxy.html  pf-peak-proxy.html  pf-train-contrib-proxy.html  px-umap-cluster-scatter.html  sklearn-compare.html  sklearn_novelty_equal_performance.pkl
figures/lc_data/: example_materials_property_lc.csv  test-property_lc.csv
mat_discover/: __init__.py  adaptive_design.py  mat_discover_.py  meta.yaml  test_mat_discover-gcv.ipynb  test_mat_discover.py
mat_discover/ElM2D/: ElM2D_.py  cpu_helper.py  cpu_metrics.py  cuda_dist_matrix.py  cuda_dist_matrix_full.py  helper.py  metrics.py  njit_dist_matrix.py  njit_dist_matrix_full.py  test_ElM2D.py  test_cpu_helper.py  test_dist_matrix.py  test_helper.py  test_njit.py  train-debug.csv
mat_discover/recipe/: meta.yaml
mat_discover/tests/: test_mat_discover.py  test_suggest_next_experiment.py
mat_discover/utils/: Timer.py  data.py  extraordinary.py  generate_elasticity_data.py  gridrdf_helper.py  nearest_neigh.py  pareto.py  plotting.py
models/: model_best.pth.tar  predict.py  test_results.csv
models/CGCNN/: Ed_regression.pth.tar  README.md  test_results.csv
recipe/: meta.yaml
tables/: comb-score.csv  dens-score.csv  peak-score.csv
(+53 files in other folders)
