[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mat_discover"
authors = [{name = "Sterling G. Baird", email = "sterling.baird@utah.edu"}]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dynamic = ["version", "description"]

dependencies = [
    "tqdm",
    "pqdm", #PyPI
    "seaborn",
    "scipy",
    "hdbscan",
    "joblib==1.1.0",
    "cython", # for hdbscan 0.8.27 or similar
    "numba >=0.53.1",
    "plotly >=5.6.0",
    "kaleido",
    "pandas",
    "matplotlib >=3.4.3",
    "scikit_learn",
    "umap-learn",
    "dill",
    "crabnet >=2.0.5,<3.0.0",
    "torch <2",
    "chem_wasserstein >=1.0.8,<2.0.0",
    "composition_based_feature_vector",
    "matbench_genmetrics >= 0.6.1",
    "megnet",
    "m3gnet",
    "gridrdf==0.3.0",
    "matbench",
    # "ElMD==0.4.8", #PyPI
    # "pymatgen",
    # "joblib",
    # "psutil",
    # for torch, run "set PIP_FIND_LINKS=https://download.pytorch.org/whl/torch_stable.html" before "flit install"
    # see also: https://github.com/takluyver/flit/issues/369
    # "torch==1.9.1+cu111", # e.g "1.9.1+cu111" or "1.7.1+cu110"
    ]

[project.optional-dependencies]
test = [
    "pytest",
    "ElM2D==0.4.1", #PyPI
    "pytest-cov",
    "pre-commit",
    "sphinx>=4.2.0",
    "myst-parser==0.18.1",
    "nbformat >=4.2.0", # for Jupyter Notebook in VS Code
    "black >=22.1.0",
    "sphinx_rtd_theme==1.1.1",
    "sphinx_copybutton==0.5.1",
    "m3gnet",
    # "gridrdf==0.3.0",
    "matminer<=0.7.4",

]
# gpu = ["torch==1.9.1+cu111"]
# cpu = ["torch"]
# dev = ["conda-smithy", ...]

[project.urls]
Source = "https://github.com/sparks-baird/mat_discover"
